<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="sign_up">Sign Up</string>
    <string name="currency_calculator">Currency\nCalculator</string>
    <string name="full_stop">.</string>
    <string name="swap_button_content_description">Swaps the value of the spinners</string>
    <string name="auto_fill_hint">1.000</string>
    <string name="convert">Convert</string>
    <string name="menu_icon">menu icon</string>
    <string name="concat_conversion_details">The rate being used is %s %s to 1 %s</string>

    <string-array name="from_currencies">
        <item>USD</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>CAD</item>
        <item>NGN</item>
    </string-array>

    <string-array name="to_currencies">
        <item>USD</item>
        <item>GBP</item>
        <item>JPY</item>
        <item>CAD</item>
        <item>NGN</item>
    </string-array>
</resources>