<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".view.MainActivity">


    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/thirty_dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/asap"
        android:text="@string/sign_up"
        android:textColor="@color/signUpColor"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/menu_icon"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_menu" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/asap_bold"
        android:text="@string/currency_calculator"
        android:textColor="@color/blue_colour"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/asap_bold"
        android:text="@string/full_stop"
        android:textColor="@color/signUpColor"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <LinearLayout
        android:id="@+id/currency_from_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <EditText
            android:id="@+id/currency_from_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:autofillHints="@string/auto_fill_hint"
            android:background="@color/background_grey"
            android:ems="10"
            android:gravity="center_vertical|start"
            android:hint="@string/auto_fill_hint"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_color"
            android:textCursorDrawable="@null" />

        <!--
        This might have to be a textView, not so sure yet
        -->

        <TextView
            android:id="@+id/currency_from_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/background_grey"
            android:gravity="center"
            android:textColor="@color/currency_text_view_color"
            android:textSize="24sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/currency_to_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical|end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_from_linearLayout">

        <EditText
            android:id="@+id/currency_to_editText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:autofillHints="@string/auto_fill_hint"
            android:background="@color/background_grey"
            android:ems="10"
            android:enabled="false"
            android:focusable="false"
            android:gravity="center_vertical|start"
            android:hint="@string/auto_fill_hint"
            android:inputType="numberDecimal"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text_color"
            android:textCursorDrawable="@null" />

        <!--
        This might have to be a textView, not so sure yet
        -->

        <TextView
            android:id="@+id/currency_to_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/background_grey"
            android:gravity="center"
            android:textColor="@color/currency_text_view_color"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_to_linearLayout">

        <Spinner
            android:id="@+id/fromSpinner"
            style="@style/spinner_style"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />

        <ImageButton
            android:id="@+id/swap_spinners_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@color/background_grey"
            android:contentDescription="@string/swap_button_content_description"
            android:elevation="6dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_convert" />

        <Spinner
            android:id="@+id/toSpinner"
            style="@style/spinner_style"
            android:layout_weight="1" />

    </LinearLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/convert_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_shape_default"
        android:fontFamily="@font/asap"
        android:padding="5dp"
        android:text="@string/convert"
        android:textAllCaps="false"
        android:textColor="@color/background_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_2"
        app:initialCornerAngle="1sp"
        app:spinning_bar_color="@color/background_color"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="2dp" />

    <TextView
        android:id="@+id/conversion_details_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/asap_bold"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert_button" />

</androidx.constraintlayout.widget.ConstraintLayout>